--- a/javah.somee/www/css/index.css
+++ b/javah.somee/www/css/index.css
@@ -1,41 +1,3 @@
-body {
-    -webkit-touch-callout: none;
-    -webkit-text-size-adjust: none;
-    -webkit-user-select: none;
-    background-color:#32383d;
-    font-family: 'RobotoRegular', 'Droid Sans', 'Segoe UI', Segoe, 'San Francisco', 'Helvetica Neue', Helvetica, Arial, Geneva, sans-serif;
-    font-size:12px;
-}
-
-.app {
-    background: url(../images/cordova.png) no-repeat center top; 
-    background-size: contain;
-    position: absolute;             
-    left: 50%;
-    top: 50%;
-    height: 30px;                  
-    width: 250px;                   
-    text-align: center;
-    padding: 200px 0px 0px 0px;     
-    margin: -125px;
-}
-
-.event {
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    color: #FFFFFF;
-    margin: 27px;
-    padding: 4px 0px;
-    text-transform: uppercase;
-    background-color: #696969;
-    animation: fade 3000ms infinite;
-    -webkit-animation: fade 3000ms infinite;
-}
-
-.ready {
-    background-color: #4B946A;
-}
-
 @keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
@@ -52,4 +14,24 @@ body {
 }
 
 @media screen and (orientation: landscape) {
+}
+
+.btn-principal{
+    width: 200px;
+    height: 100px;
+}
+.title-panel-body{
+    text-decoration: underline;
+    font-weight: bold;
+    
+}
+html, body{
+    background-color: white;
+}
+input[type=checkbox],[type=radio]{
+    width: 20px;
+    height: 20px;
+}
+.checkbox-align{
+    line-height: 28px;
 }
